--- a/add-books/style.css
+++ b/add-books/style.css
@@ -3,9 +3,43 @@
 	min-height: 100vh;
 	max-width: 70em;
 	padding: 2em 2em 4em 2em;
-	gap: 3em;
+	gap: 1.8em;
 }
 
 #nav {
 	padding: 1em 0;
+}
+
+#file-box {
+	width: 100%;
+	padding: 2em;
+	text-align: center;
+	border-radius: 0.25em;
+	border: 2px dashed rgba(0, 0, 0, 0.425);
+	position: relative;
+}
+
+#file-box:hover {
+	border-color: black;
+}
+
+#file {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	opacity: 0;
+}
+
+#file-label {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	height: 100%;
+}
+
+#submit {
+	max-width: 6em;
+	align-self: center;
 }
