--- a/style/main.css
+++ b/style/main.css
@@ -42,6 +42,9 @@ body {
 .nav-link:hover {
 	opacity: 0.7;
 }
+.nav-link:focus {
+	outline: 1px solid black;
+}
 
 #main {
 	width: 100%;
@@ -114,6 +117,11 @@ body {
 	font-weight: 700;
 	letter-spacing: 0.04em;
 	font-family: var(--main-font);
+}
+
+#submit:focus {
+	border-color: black;
+	outline: 1px solid black;
 }
 
 .focused {
